--- a/assets/index.css
+++ b/assets/index.css
@@ -16,10 +16,16 @@
   background-color: var(--light-brown);
   font-family: "Poppins", sans-serif;
   color: var(--text-color);
-  scroll-behavior: smooth; 
+  scroll-behavior: smooth;
+  
 }
 
-
+html, body {
+  overflow-x: hidden;
+}
+.about {
+  overflow-x: visible; 
+}
 /* mobile */
 @media screen and (min-width: 320px) and (max-width: 767px) {
   /* navbar */
